Axxonet Update Initial

--- a/examples/overrides/consumer.yaml
+++ b/examples/overrides/consumer.yaml
@@ -2,5 +2,5 @@ image:
   tag: "1.0.2"
 
 app:
-  elasticSearchUrl: "kaduna-elasticsearch-client"
-  kafkaUrl: "kaduna-kafka.kaduna:9092"
+  elasticSearchUrl: "axxonet-elasticsearch-client"
+  kafkaUrl: "axxonet-kafka.axxonet:9092"
