--- a/examples/overrides/ui.yaml
+++ b/examples/overrides/ui.yaml
@@ -4,19 +4,19 @@
 ui:
   tag: aet-filesystem-s3
 environment: "prod"
-ums_url: https://ums.ehealthafrica.org
-kernel_url: https://kernel-kaduna.ehealthafrica.org
-domain: ehealthafrica.org
-trusted_origins: .ehealthafrica.org
+ums_url: https://ums.aether-axxonet.com
+kernel_url: https://kernel-axxonet.aether-axxonet.com
+domain: aether-axxonet.com
+trusted_origins: .aether-axxonet.com
 ingress:
-  certsecret: wildcard-ehealthafrica
+  certsecret: wildcard-axxonet
   hosts:
-    - ui-kaduna.ehealthafrica.org
+    - ui-aether-axxonet.com
   annotations:
     nginx.ingress.kubernetes.io/enable-cors: "true"
 database:
   # set google sql instance name, e.g. modern-rex-207814:europe-west1:gatherdb-instance
-  instance: kdbs-data-col-proj:europe-west2:db-instance
+  instance: axxonet-data-col-proj:asia-south1:axxonet-db-instance
 provider:
   aws: false
   gcp: true
